--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
-  <script type="module" src="original/index.js"></script>
+  <script type="module" src="index.js"></script>
 </head>
 <body>
-  <canvas id="final" width="500" height="500"></canvas>
+  <canvas id="canvas" width="500" height="500"></canvas>
 </body>
